--- a/src/style/bootstrap.scss
+++ b/src/style/bootstrap.scss
@@ -19,8 +19,11 @@
 
 // 6. Optionally include any other parts as needed
 @import '../../node_modules/bootstrap/scss/buttons';
+@import '../../node_modules/bootstrap/scss/card';
 @import '../../node_modules/bootstrap/scss/containers';
 @import '../../node_modules/bootstrap/scss/dropdown';
+@import '../../node_modules/bootstrap/scss/grid';
+@import '../../node_modules/bootstrap/scss/helpers';
 @import '../../node_modules/bootstrap/scss/nav';
 @import '../../node_modules/bootstrap/scss/navbar';
 @import '../../node_modules/bootstrap/scss/reboot';
