--- a/src/style/bootstrap.scss
+++ b/src/style/bootstrap.scss
@@ -24,6 +24,7 @@
 @import '../../node_modules/bootstrap/scss/dropdown';
 @import '../../node_modules/bootstrap/scss/grid';
 @import '../../node_modules/bootstrap/scss/helpers';
+@import '../../node_modules/bootstrap/scss/images';
 @import '../../node_modules/bootstrap/scss/nav';
 @import '../../node_modules/bootstrap/scss/navbar';
 @import '../../node_modules/bootstrap/scss/reboot';
