--- a/src/style/bootstrap.scss
+++ b/src/style/bootstrap.scss
@@ -32,3 +32,13 @@
 
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import '../../node_modules/bootstrap/scss/utilities/api';
+
+.card {
+    a {
+        color: var(--bs-black);
+        text-decoration: none;
+    }
+    img {
+        height: 150px;
+    }
+}
